[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/demos/active_ability_demo.gd" id="1"]

[node name="ActiveAbilityDemo" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -400.0
offset_right = 400.0
offset_bottom = 400.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "ACTIVE ABILITY SYSTEM DEMO"
horizontal_alignment = 1

[node name="AbilitySystemLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Tests: Franklin, George, Vampire, Emi, Ellen"
horizontal_alignment = 1

[node name="TestButtons" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="TestFranklinButton" type="Button" parent="VBoxContainer/TestButtons"]
custom_minimum_size = Vector2(600, 50)
layout_mode = 2
size_flags_horizontal = 4
text = "Test Franklin (Leadership - Move George to same zone)"

[node name="TestGeorgeButton" type="Button" parent="VBoxContainer/TestButtons"]
custom_minimum_size = Vector2(600, 50)
layout_mode = 2
size_flags_horizontal = 4
text = "Test George (Demolition - 3 damage to Franklin, 2 self-damage)"

[node name="TestVampireButton" type="Button" parent="VBoxContainer/TestButtons"]
custom_minimum_size = Vector2(600, 50)
layout_mode = 2
size_flags_horizontal = 4
text = "Test Vampire (Bloodthirst - 1 damage to Franklin, heal 1)"

[node name="TestEmiButton" type="Button" parent="VBoxContainer/TestButtons"]
custom_minimum_size = Vector2(600, 50)
layout_mode = 2
size_flags_horizontal = 4
text = "Test Emi (Blessed - +1 attack damage)"

[node name="TestEllenButton" type="Button" parent="VBoxContainer/TestButtons"]
custom_minimum_size = Vector2(600, 50)
layout_mode = 2
size_flags_horizontal = 4
text = "Test Ellen (Curse - Disable Franklin's ability)"

[node name="TestValidationButton" type="Button" parent="VBoxContainer/TestButtons"]
custom_minimum_size = Vector2(600, 50)
layout_mode = 2
size_flags_horizontal = 4
text = "Test Validation (Once per game, disabled abilities)"

[node name="StatusLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Player States:
(Will update after tests)"

[node name="BackButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 4
text = "Back to Menu"
